# kis-proto

./: .travis.yml  LICENSE  kis-proto.cabal
app/: Main.hs
kis/: Main.hs
src/: App.hs  Kis.hs  Web.hs
src/Kis/: Backend.hs  Kis.hs  Loop.hs  Model.hs  Notifications.hs  ReadOnly.hs  Services.hs  SqlBackend.hs  SqliteBackend.hs  Time.hs  Types.hs
src/Simulator/: Sim.hs  Template.hs
test/: KisSpec.hs  NotifSpec.hs  PostgresSpec.hs  WebSpec.hs
