name:                kis-proto
version:             0.1.0.0
synopsis:            Initial project template from stack, using hspec and quickcheck
description:         Please see README.md
homepage:            https://github.com/lslah/kis-proto#readme
license:             BSD3
license-file:        LICENSE
author:              Thomas Wienecke
maintainer:          wienecke.t@gmail.com
copyright:           2016 Thomas Wienecke
category:            Web
build-type:          Simple
-- extra-source-files:
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  build-depends:       base >= 4.7 && < 5
                     , mtl
                     , extra
                     , Spock
                     , wai-middleware-static
                     , wai
                     , transformers
                     , containers
                     , persistent
                     , persistent-sqlite
                     , persistent-template
                     , esqueleto
                     , monad-logger
                     , resourcet
                     , text
                     , resource-pool
                     , monad-control
  default-language:    Haskell2010
  exposed-modules:     App
                     , Kis
                     , Kis.Kis
                     , Kis.Model
                     , Kis.SqlBackend
                     , Web
  ghc-options:       -Wall -fwarn-incomplete-patterns

executable kis-proto
  hs-source-dirs:      app
  main-is:             Main.hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  build-depends:       base
                     , kis-proto
  default-language:    Haskell2010

test-suite kis-proto-test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Spec.hs
  build-depends:       base
                     , bytestring
                     , kis-proto
                     , hspec
                     , hspec-wai
                     , mtl
                     , aeson
                     , wai-extra
                     , transformers
                     , QuickCheck
                     , persistent-sqlite
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N -Wall -fwarn-incomplete-patterns
  default-language:    Haskell2010
  other-modules:       KisSpec
                     , WebSpec

source-repository head
  type:     git
  location: https://github.com/lslah/kis-proto
